@@ -1,3 +1,7 @@
+Fri Feb  9 12:25:13 UTC 2007 / Alexander I. Gordeev <lasaine@lvk.cs.msu.su>
+
+ - drivers/megatec_usb.c: most instant commands implemented.
+
 Thu Feb  8 16:21:24 UTC 2007 / Peter Selinger <selinger@users.sourceforge.net>
 
  - libusb.c: added MODE_NOHID to libusb_open(). This currently does
